# anthill

./: README.md
anthill-server/: .coveragerc  .dockerignore  Dockerfile  README.md  pyproject.toml  pytest.ini  spinproject.json
anthill-server/anthill/: apps.py
anthill-server/main/: settings.py
anthill-server/script/: bootstrap  setup  test  x-clean  x-dockerbuild  x-dockerpush
