[tool.poetry]
name = "anthill-server"
version = "0.0.1"
description = "Anthill server part"
authors = ["Kirill Lekhov <Kirill.Lekhov@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
django = "^4.2.5"
psycopg2-binary = "^2.9.7"
django-environ = "^0.11.2"
whitenoise = "^6.5.0"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.2"
pytest-django = "^4.5.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
